# ResACEUnet

./: LICENSE  README.md  environment.yml
fault_detection/: .gitignore  __init__.py  config.py  lr_scheduler.py  main.py  metrics.py  optimizer.py  predict_3d.py  process.py  pyproject.toml
fault_detection/config/: config.yaml
fault_detection/configs/: RESACEUNET.yaml  RESUNET.yaml  SWINUNETR.yaml  UNET.yaml  config.yaml
fault_detection/data/: __init__.py  build_data.py  process.py
fault_detection/dataset/: README.md
fault_detection/datasets/: __init__.py  process.py
fault_detection/loss/: TopK_loss.py  __init__.py  deep_supervision.py  dice_loss.py  focal_loss.py  losses.py
fault_detection/metric/: metrics.py
fault_detection/metrics/: __init__.py  metrics.py
fault_detection/model/: ResACEUNet2.py  ResUNet.py  STUNet.py  SimAUNeXt.py  SwinUNETR.py  UNETR.py  UNETR_PP.py  UNet3.py  UNet4.py  build.py
fault_detection/models/: ResACEUnet.py  ResACEUnet2.py  ResUnet.py  Swin_UnetR.py  UNet3.py  Unet.py  __init__.py  build.py  initialization.py
fault_detection/optimizer/: __init__.py  lr_scheduler.py  optimizer.py
fault_detection/util/: checkpoint.py  config.py  distributed.py  logger.py  result_3D.py  to_torch.py
fault_detection/utils/: __init__.py  casual.py  checkpoint.py  conf.py  config.py  data_utils.py  grad_norm.py  logger.py  random_stuff.py  readsgy.ipynb  result_2D.py  result_3D.py  sgy_npy.py  sgy_npy_dat.py  show_results.py  sliding_window.py  tensor_utilities.py  utils.py
